// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`a tile truncated mid-layer > carries the walker failure on the handle 1`] = `"unexpected end of input (unable to take 231 bytes)"`;

exports[`a tile truncated mid-layer > keeps the regions the walk did reach 1`] = `
[
  "layer[0]",
  "size",
  "tag",
  "name",
  "extent",
  "column_count",
  "schema",
  "column[0]",
  "type",
  "column[1]",
  "type",
  "column data",
  "column[0] Id",
  "id",
  "header",
  "stream_type",
  "encoding",
  "num_values",
  "byte_length",
  "data",
  "column[1] Geometry",
  "stream_count",
  "meta",
  "header",
  "stream_type",
  "encoding",
  "num_values",
  "byte_length",
  "data",
  "stream[0]",
  "header",
  "stream_type",
  "encoding",
  "num_values",
  "byte_length",
  "data",
  "layer[1]",
  "size",
  "tag",
  "<unannotated>",
]
`;

exports[`annotateTile > annotates a v1 tile 1`] = `
{
  "bufLen": 30,
  "regions": [
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 0,
      "kind": "meta",
      "label": "layer[0]",
      "len": 30,
      "offset": 0,
      "value": null,
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 1,
      "kind": "meta",
      "label": "size",
      "len": 1,
      "offset": 0,
      "value": "29 (varint) - tag + body",
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 1,
      "kind": "meta",
      "label": "tag",
      "len": 1,
      "offset": 1,
      "value": "0x01 -> Tag01",
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 1,
      "kind": "meta",
      "label": "name",
      "len": 7,
      "offset": 2,
      "value": ""layer1"",
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 1,
      "kind": "meta",
      "label": "extent",
      "len": 1,
      "offset": 9,
      "value": "64",
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 1,
      "kind": "meta",
      "label": "column_count",
      "len": 1,
      "offset": 10,
      "value": "2",
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 1,
      "kind": "meta",
      "label": "schema",
      "len": 2,
      "offset": 11,
      "value": null,
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 2,
      "kind": "meta",
      "label": "column[0]",
      "len": 1,
      "offset": 11,
      "value": null,
    },
    {
      "bits": [
        {
          "hi": 7,
          "lo": 1,
          "meaning": "base type = Id",
          "raw": 0,
        },
        {
          "hi": 0,
          "lo": 0,
          "meaning": "not optional: each feature has a non-NULL value",
          "raw": 0,
        },
      ],
      "blob": null,
      "container": false,
      "depth": 3,
      "kind": "meta",
      "label": "type",
      "len": 1,
      "offset": 11,
      "value": "0x00 Id",
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 2,
      "kind": "meta",
      "label": "column[1]",
      "len": 1,
      "offset": 12,
      "value": null,
    },
    {
      "bits": [
        {
          "hi": 7,
          "lo": 1,
          "meaning": "base type = Geometry",
          "raw": 2,
        },
        {
          "hi": 0,
          "lo": 0,
          "meaning": "not optional: each feature has a non-NULL value",
          "raw": 0,
        },
      ],
      "blob": null,
      "container": false,
      "depth": 3,
      "kind": "meta",
      "label": "type",
      "len": 1,
      "offset": 12,
      "value": "0x04 Geometry",
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 1,
      "kind": "meta",
      "label": "column data",
      "len": 17,
      "offset": 13,
      "value": null,
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 2,
      "kind": "meta",
      "label": "column[0] Id",
      "len": 5,
      "offset": 13,
      "value": null,
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 3,
      "kind": "meta",
      "label": "id",
      "len": 5,
      "offset": 13,
      "value": null,
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 4,
      "kind": "meta",
      "label": "header",
      "len": 4,
      "offset": 13,
      "value": null,
    },
    {
      "bits": [
        {
          "hi": 7,
          "lo": 4,
          "meaning": "category = Data",
          "raw": 1,
        },
        {
          "hi": 3,
          "lo": 0,
          "meaning": "subtype = None",
          "raw": 0,
        },
      ],
      "blob": null,
      "container": false,
      "depth": 5,
      "kind": "meta",
      "label": "stream_type",
      "len": 1,
      "offset": 13,
      "value": "0x10 Data(None)",
    },
    {
      "bits": [
        {
          "hi": 7,
          "lo": 5,
          "meaning": "logical1 = None",
          "raw": 0,
        },
        {
          "hi": 4,
          "lo": 2,
          "meaning": "logical2 = None",
          "raw": 0,
        },
        {
          "hi": 1,
          "lo": 0,
          "meaning": "physical = VarInt",
          "raw": 2,
        },
      ],
      "blob": null,
      "container": false,
      "depth": 5,
      "kind": "meta",
      "label": "encoding",
      "len": 1,
      "offset": 14,
      "value": "0x02 logical=Int(None) physical=VarInt",
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 5,
      "kind": "meta",
      "label": "num_values",
      "len": 1,
      "offset": 15,
      "value": "1",
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 5,
      "kind": "meta",
      "label": "byte_length",
      "len": 1,
      "offset": 16,
      "value": "1",
    },
    {
      "bits": [],
      "blob": {
        "hint": {
          "kind": "u32",
        },
        "logical": "int/none",
        "numValues": 1,
        "physical": "varint",
        "streamType": "data",
      },
      "container": false,
      "depth": 4,
      "kind": "dataBlob",
      "label": "data",
      "len": 1,
      "offset": 17,
      "value": null,
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 2,
      "kind": "meta",
      "label": "column[1] Geometry",
      "len": 12,
      "offset": 18,
      "value": null,
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 3,
      "kind": "meta",
      "label": "stream_count",
      "len": 1,
      "offset": 18,
      "value": "2",
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 3,
      "kind": "meta",
      "label": "meta",
      "len": 5,
      "offset": 19,
      "value": null,
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 4,
      "kind": "meta",
      "label": "header",
      "len": 4,
      "offset": 19,
      "value": null,
    },
    {
      "bits": [
        {
          "hi": 7,
          "lo": 4,
          "meaning": "category = Length",
          "raw": 3,
        },
        {
          "hi": 3,
          "lo": 0,
          "meaning": "subtype = VarBinary",
          "raw": 0,
        },
      ],
      "blob": null,
      "container": false,
      "depth": 5,
      "kind": "meta",
      "label": "stream_type",
      "len": 1,
      "offset": 19,
      "value": "0x30 Length(VarBinary)",
    },
    {
      "bits": [
        {
          "hi": 7,
          "lo": 5,
          "meaning": "logical1 = None",
          "raw": 0,
        },
        {
          "hi": 4,
          "lo": 2,
          "meaning": "logical2 = None",
          "raw": 0,
        },
        {
          "hi": 1,
          "lo": 0,
          "meaning": "physical = VarInt",
          "raw": 2,
        },
      ],
      "blob": null,
      "container": false,
      "depth": 5,
      "kind": "meta",
      "label": "encoding",
      "len": 1,
      "offset": 20,
      "value": "0x02 logical=Int(None) physical=VarInt",
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 5,
      "kind": "meta",
      "label": "num_values",
      "len": 1,
      "offset": 21,
      "value": "1",
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 5,
      "kind": "meta",
      "label": "byte_length",
      "len": 1,
      "offset": 22,
      "value": "1",
    },
    {
      "bits": [],
      "blob": {
        "hint": {
          "kind": "u32",
        },
        "logical": "int/none",
        "numValues": 1,
        "physical": "varint",
        "streamType": "length[var-binary]",
      },
      "container": false,
      "depth": 4,
      "kind": "dataBlob",
      "label": "data",
      "len": 1,
      "offset": 23,
      "value": null,
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 3,
      "kind": "meta",
      "label": "stream[0]",
      "len": 6,
      "offset": 24,
      "value": null,
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 4,
      "kind": "meta",
      "label": "header",
      "len": 4,
      "offset": 24,
      "value": null,
    },
    {
      "bits": [
        {
          "hi": 7,
          "lo": 4,
          "meaning": "category = Data",
          "raw": 1,
        },
        {
          "hi": 3,
          "lo": 0,
          "meaning": "subtype = Vertex",
          "raw": 3,
        },
      ],
      "blob": null,
      "container": false,
      "depth": 5,
      "kind": "meta",
      "label": "stream_type",
      "len": 1,
      "offset": 24,
      "value": "0x13 Data(Vertex)",
    },
    {
      "bits": [
        {
          "hi": 7,
          "lo": 5,
          "meaning": "logical1 = ComponentwiseDelta",
          "raw": 2,
        },
        {
          "hi": 4,
          "lo": 2,
          "meaning": "logical2 = None",
          "raw": 0,
        },
        {
          "hi": 1,
          "lo": 0,
          "meaning": "physical = VarInt",
          "raw": 2,
        },
      ],
      "blob": null,
      "container": false,
      "depth": 5,
      "kind": "meta",
      "label": "encoding",
      "len": 1,
      "offset": 25,
      "value": "0x42 logical=Vertex(ComponentwiseDelta) physical=VarInt",
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 5,
      "kind": "meta",
      "label": "num_values",
      "len": 1,
      "offset": 26,
      "value": "2",
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 5,
      "kind": "meta",
      "label": "byte_length",
      "len": 1,
      "offset": 27,
      "value": "2",
    },
    {
      "bits": [],
      "blob": {
        "hint": {
          "kind": "i32",
        },
        "logical": "vertex/componentwise-delta",
        "numValues": 2,
        "physical": "varint",
        "streamType": "data[vertex]",
      },
      "container": false,
      "depth": 4,
      "kind": "dataBlob",
      "label": "data",
      "len": 2,
      "offset": 28,
      "value": null,
    },
  ],
}
`;

exports[`annotateTile > annotates a v2 tile 1`] = `
{
  "bufLen": 22,
  "regions": [
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 0,
      "kind": "meta",
      "label": "layer[0]",
      "len": 22,
      "offset": 0,
      "value": null,
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 1,
      "kind": "meta",
      "label": "size",
      "len": 1,
      "offset": 0,
      "value": "21 (varint) - tag + body",
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 1,
      "kind": "meta",
      "label": "tag",
      "len": 1,
      "offset": 1,
      "value": "0x02 -> Tag02",
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 1,
      "kind": "meta",
      "label": "name",
      "len": 7,
      "offset": 2,
      "value": ""layer1"",
    },
    {
      "bits": [
        {
          "hi": 7,
          "lo": 7,
          "meaning": "no m-value section",
          "raw": 0,
        },
        {
          "hi": 6,
          "lo": 4,
          "meaning": "every feature is a Point, no types stream",
          "raw": 1,
        },
        {
          "hi": 3,
          "lo": 0,
          "meaning": "extent = 64",
          "raw": 0,
        },
      ],
      "blob": null,
      "container": false,
      "depth": 1,
      "kind": "meta",
      "label": "header",
      "len": 1,
      "offset": 9,
      "value": "extent = 64, every feature is a Point",
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 1,
      "kind": "meta",
      "label": "feature_count",
      "len": 1,
      "offset": 10,
      "value": "1",
    },
    {
      "bits": [
        {
          "hi": 7,
          "lo": 4,
          "meaning": "shared presence bitfields = 0",
          "raw": 0,
        },
        {
          "hi": 3,
          "lo": 0,
          "meaning": "geometry layout = Points",
          "raw": 0,
        },
      ],
      "blob": null,
      "container": false,
      "depth": 1,
      "kind": "meta",
      "label": "layout",
      "len": 1,
      "offset": 11,
      "value": "0x00 Points",
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 1,
      "kind": "meta",
      "label": "geometry",
      "len": 5,
      "offset": 12,
      "value": null,
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 2,
      "kind": "meta",
      "label": "vertices",
      "len": 5,
      "offset": 12,
      "value": null,
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 3,
      "kind": "meta",
      "label": "header",
      "len": 3,
      "offset": 12,
      "value": null,
    },
    {
      "bits": [
        {
          "hi": 7,
          "lo": 7,
          "meaning": "has_explicit_count = true -> a num_values varint follows",
          "raw": 1,
        },
        {
          "hi": 6,
          "lo": 4,
          "meaning": "logical = CwDelta, numbered for vertex stream",
          "raw": 2,
        },
        {
          "hi": 3,
          "lo": 2,
          "meaning": "physical = VarInt",
          "raw": 2,
        },
        {
          "hi": 1,
          "lo": 0,
          "meaning": "extension = 0",
          "raw": 0,
        },
      ],
      "blob": null,
      "container": false,
      "depth": 4,
      "kind": "meta",
      "label": "encoding",
      "len": 1,
      "offset": 12,
      "value": "0xA8 logical=CwDelta physical=VarInt",
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 4,
      "kind": "meta",
      "label": "num_values",
      "len": 1,
      "offset": 13,
      "value": "2",
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 4,
      "kind": "meta",
      "label": "byte_length",
      "len": 1,
      "offset": 14,
      "value": "2",
    },
    {
      "bits": [],
      "blob": {
        "hint": {
          "kind": "i32",
        },
        "logical": "vertex/componentwise-delta",
        "numValues": 2,
        "physical": "varint",
        "streamType": "data[vertex]",
      },
      "container": false,
      "depth": 3,
      "kind": "dataBlob",
      "label": "data",
      "len": 2,
      "offset": 15,
      "value": null,
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 1,
      "kind": "meta",
      "label": "column_count",
      "len": 1,
      "offset": 17,
      "value": "1",
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 1,
      "kind": "meta",
      "label": "columns",
      "len": 4,
      "offset": 18,
      "value": null,
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 2,
      "kind": "meta",
      "label": "column[0] Id",
      "len": 4,
      "offset": 18,
      "value": null,
    },
    {
      "bits": [
        {
          "hi": 7,
          "lo": 4,
          "meaning": "presence = AllPresent",
          "raw": 0,
        },
        {
          "hi": 3,
          "lo": 0,
          "meaning": "data type = Id",
          "raw": 0,
        },
      ],
      "blob": null,
      "container": false,
      "depth": 3,
      "kind": "meta",
      "label": "type",
      "len": 1,
      "offset": 18,
      "value": "0x00 AllPresent Id",
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 3,
      "kind": "meta",
      "label": "data",
      "len": 3,
      "offset": 19,
      "value": null,
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 4,
      "kind": "meta",
      "label": "header",
      "len": 2,
      "offset": 19,
      "value": null,
    },
    {
      "bits": [
        {
          "hi": 7,
          "lo": 7,
          "meaning": "has_explicit_count = false -> 1 values from context",
          "raw": 0,
        },
        {
          "hi": 6,
          "lo": 4,
          "meaning": "logical = None, numbered for integer stream",
          "raw": 0,
        },
        {
          "hi": 3,
          "lo": 2,
          "meaning": "physical = VarInt",
          "raw": 2,
        },
        {
          "hi": 1,
          "lo": 0,
          "meaning": "extension = 0",
          "raw": 0,
        },
      ],
      "blob": null,
      "container": false,
      "depth": 5,
      "kind": "meta",
      "label": "encoding",
      "len": 1,
      "offset": 19,
      "value": "0x08 logical=None physical=VarInt",
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 5,
      "kind": "meta",
      "label": "byte_length",
      "len": 1,
      "offset": 20,
      "value": "1",
    },
    {
      "bits": [],
      "blob": {
        "hint": {
          "kind": "u32",
        },
        "logical": "int/none",
        "numValues": 1,
        "physical": "varint",
        "streamType": "data",
      },
      "container": false,
      "depth": 4,
      "kind": "dataBlob",
      "label": "data",
      "len": 1,
      "offset": 21,
      "value": null,
    },
  ],
}
`;

exports[`decodeBlob > decodes a string payload as text 1`] = `
{
  "kind": "text",
  "value": "residential_zone_north_sector_1commercial_zone_south_sector_2industrial_zone_east_sector_3park_zone_west_sector_4water_zone_north_sector_5residential_zone_south_sector_6",
}
`;

exports[`decodeBlob > hands ALP parameters across as a BigInt 1`] = `
{
  "base": -225n,
  "e": 2,
  "f": 0,
  "kind": "alp",
}
`;
